Import translations from Crowdin

--- a/Vienna/Interfaces/mul.lproj/Application.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/Application.xcstrings
@@ -9808,7 +9808,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Öffne Webseite des Artikels"
+            "value" : "Zur Artikelseite"
           }
         },
         "en" : {
@@ -10204,7 +10204,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Öffne Artikelseite im externen Browser"
+            "value" : "Artikelseite im externen Browser öffnen"
           }
         },
         "en" : {
@@ -13030,7 +13030,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Öffne Webseite des Abonnements"
+            "value" : "Zur Homepage des Abonnements"
           }
         },
         "en" : {
@@ -13162,7 +13162,7 @@
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Öffne Homepage des Abonnements im externen Browser"
+            "value" : "Homepage des Abonnements im externen Browser öffnen"
           }
         },
         "en" : {
@@ -13222,7 +13222,7 @@
         "nl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Open abonnement-pagina in externe browser"
+            "value" : "Open startpagina van abonnement in externe browser"
           }
         },
         "pt-BR" : {
