--- a/Vienna/SharedSupport/Plugins/ShareWithX.viennaplugin/fr.lproj/InfoPlist.strings
+++ b/Vienna/SharedSupport/Plugins/ShareWithX.viennaplugin/fr.lproj/InfoPlist.strings
@@ -1,8 +1,8 @@
 /* The name of the plug-in, such as the name of the website or app. */
-"FriendlyName" = "Buffer";
+"FriendlyName" = "X";
 
 /* The label for the plug-in in toolbar items and menu items. */
-"MenuPath" = "Ajouter à Buffer";
+"MenuPath" = "Partager sur X";
 
 /* The tool tip for the plug-in in toolbar items. */
-"Tooltip" = "Ajouter l'article en cours à Buffer";
+"Tooltip" = "Partager l'article en cours sur X";
